--- a/index.html
+++ b/index.html
@@ -320,8 +320,6 @@
             </div>
             <button>Load More</button>
 
-            <h6>Designed by: Amit Khotele😎</h6>
-
         </div>
 
         <!--      right     -->
@@ -414,6 +412,16 @@
         </div>
 
     </div>
+
+    <footer>
+        <div class="social-icons">
+          <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/amit-khotele-a241621b6/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.instagram.com/amit.ak__/" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+        <p class="foot">&copy; 2024 AMIT-AK. All rights reserved.</p>
+      </footer>
 </body>
 
 </html>
